chore: bump Cassandra to 4.1 (#10)
Signed-off-by: Yoan Blanc <yblanc@edgelab.ch>
Co-authored-by: Jonathan Ballet <jon@multani.info>