@@ -15,7 +15,7 @@
   </distributionManagement>
 
   <properties>
-    <cassandra-version>4.0.16</cassandra-version>
+    <cassandra-version>4.1.10</cassandra-version>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
     <maven.compiler.release>11</maven.compiler.release>
@@ -33,9 +33,15 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
-      <version>5.8.2</version>
+      <version>6.0.0</version>
       <scope>test</scope>
       <type>jar</type>
+    </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-tcnative-boringssl-static</artifactId>
+      <version>2.0.74.Final</version>
+      <scope>runtime</scope>
     </dependency>
   </dependencies>
 
@@ -43,15 +49,22 @@
     <plugins>
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
-        <version>3.3.0</version>
+        <version>3.7.1</version>
+      </plugin>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.14.1</version>
       </plugin>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M7</version>
+        <version>3.5.4</version>
         <configuration>
           <argLine>
-            --add-exports java.base/sun.nio.ch=ALL-UNNAMED
             --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
+            --add-exports java.base/sun.nio.ch=ALL-UNNAMED
+            --add-opens java.base/java.io=ALL-UNNAMED
+            --add-opens java.base/sun.nio.ch=ALL-UNNAMED
+            --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
           </argLine>
         </configuration>
       </plugin>
